--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cinecampus",
+  "name": "cinecampuslands",
   "version": "1.0.0",
   "main": "app.js",
   "type": "commonjs",
@@ -9,12 +9,12 @@
   "keywords": [],
   "author": "Willliam Jair Sepulveda Carrillo",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.0",
     "typescript": "^5.5.4"
-  },
-  "description": ""
+  }
 }
