--- a/.envTemplate
+++ b/.envTemplate
@@ -1,5 +1,12 @@
-MONGO_DB_ATLAS_PROTOCOL 
-MONGO_DB_ATLAS_USER 
-MONGO_DB_ATLAS_PSW 
-MONGO_DB_ATLAS_REPLICA 
-MONGO_DB_ATLAS_AUTH 
+EXPRESS_STATIC
+EXPRESS_PORT
+EXPRESS_HOST_NAME
+EXPRESS_PROTOCOL
+EXPRESS_KEY_SECRET
+
+MONGO_PROTOCOL
+MONGO_USER
+MONGO_PSW
+MONGO_HOST_NAME
+MONGO_PORT
+MONGO_DB_NAME
